Bug 684492 - shutdown crash nsLDAPConnection::~nsLDAPConnection(). r+a=Standard8